--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,40 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+
+APP_NAME=Laravel
+APP_ENV=local
+APP_KEY=base64:Nmb+k4VS262m+aENPymgmoHJK9RMUJDJGZWtUxDum7g=
+APP_DEBUG=true
+APP_LOG_LEVEL=debug
+APP_URL=http://localhost
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=starkai
+DB_USERNAME=root
+DB_PASSWORD=*2235Ab-4
+
+BROADCAST_DRIVER=log
+CACHE_DRIVER=file
+SESSION_DRIVER=file
+QUEUE_DRIVER=sync
+
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=239874a97dce18
+MAIL_PASSWORD=fb4e215082322b
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=hello@starklabs.com
+MAIL_FROM_NAME=Contact
+
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
