--- a/.env.example
+++ b/.env.example
@@ -110,3 +110,45 @@ MAILGUN_SECRET=key-5f2154680163d79c522a354aa1dd1c07
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+
+// October 21
+
+APP_NAME=Laravel
+APP_ENV=local
+APP_KEY=base64:NHcLKmOF2OB0/TdaLYIHJqU/qIqAIfyLyP9LAdCY/Vo=
+APP_DEBUG=true
+APP_LOG_LEVEL=debug
+APP_URL=http://localhost
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=homestead
+DB_USERNAME=homestead
+DB_PASSWORD=secret
+
+BROADCAST_DRIVER=log
+CACHE_DRIVER=file
+SESSION_DRIVER=file
+QUEUE_DRIVER=sync
+
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+MAIL_DRIVER=mailgun
+MAIL_HOST=smtp.mailgun.org
+MAIL_PORT=587
+MAIL_USERNAME=postmaster@starklabs.io
+MAIL_PASSWORD=33431ac731ecca590c80801b496e9f6b
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=hello@starklabs.com
+MAIL_FROM_NAME=StarkLabs
+
+//MAILGUN_DOMAIN=postmaster@sandbox4c68e83343004c6ba879b032de74e635.mailgun.org
+MAILGUN_SECRET=key-5f2154680163d79c522a354aa1dd1c07
+
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
